change random song
delete server random select song
add news prev-icon and next-icon for change songs in js

--- a/html/index.html
+++ b/html/index.html
@@ -17,13 +17,16 @@
 
     <!-- Music Controls -->
     <div id="music-controls" style="display: none;">
+        <i id="prev-icon" class="fas fa-backward" title="Previous"></i>
         <i id="play-icon" class="fas fa-play" title="Play Music"></i>
         <i id="pause-icon" class="fas fa-pause" title="Pause Music" style="display: none;"></i>
+        <i id="next-icon" class="fas fa-forward" title="Next Music"></i>
         <span id="volume-control">
              <i class="fas fa-volume-down"></i>
              <input type="range" id="volume-slider" min="0" max="100" value="30" title="Volume">
              <i class="fas fa-volume-up"></i>
         </span>
+        <!-- Dentro de #music-controls -->
     </div>
 
     <!-- Handover Info -->
